function(add_raven_test source_file)
    get_filename_component(test_name ${source_file} NAME_WE)
    add_executable(${test_name} ${source_file})
    target_include_directories(${test_name} PUBLIC ${RAVEN_INCLUDE_DIR})
    target_include_directories(${test_name} PUBLIC ${MSQUIC_INCLUDE_DIR} ${MOODY_CAMEL_INCLUDE_DIR} ${PROTOBUF_MESSAGES_INCLUDE_DIR})
    target_link_libraries(${test_name} PUBLIC raven)
endfunction()

add_raven_test(serialize_trivial_tests.cpp)
add_raven_test(serialize_quic_var_int_tests.cpp)
add_raven_test(serialize_client_setup_message.cpp)
add_raven_test(serialize_server_setup_message.cpp)
add_raven_test(serialize_subscribe_message.cpp)
add_raven_test(serialize_subscribe_update_message.cpp)
